# PB

./: .cursorignore  .gitignore  25M_VOLUME_TEST_COMPLETE.md  50_50_ROLLOVER_IMPLEMENTATION.md  ANCHOR_PDA_INIT_SOLUTION.md  AUTO_BALANCING_LP_GUIDE.md  AUTO_ENTRY_IMPLEMENTATION.md  Anchor.toml  BOT_TESTING_GUIDE.md  BUILD_ERROR_NOT_SECRETS.md  BYPASS_BUILD_SOLUTION.md  CHECK_DEPLOYMENT.md  CLEANUP_SUMMARY.md  COMPLETE_UPDATE_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  CONTRACT_UPGRADES.md  CRASH_LOG_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_UPGRADE_CHECKLIST.md  DEPLOY_NOW.md  DEVNET_DEPLOYMENT_COMPLETE.md  DEVNET_DEPLOYMENT_SUMMARY.txt  DEVNET_TESTING_GUIDE.md  EFFICIENT_TESTING_GUIDE.md  FINAL_LP_CREATION_GUIDE.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FIXES_VERIFICATION.md  FIX_ANCHOR_VERSION.md  FORCE_VERCEL_DEPLOY.md  GET_DEVNET_SOL.md  GITHUB_VERCEL_DEPLOYMENT_STATUS.md  HARMONIZED_SETTLEMENT.md  (+88 more)
api/: lottery-state.js
app/: .vercel-deploy-trigger  .vercelignore  deploy.sh  draw-animation.js  index.html  lottery-data.js  package.json  winners-data.js  winners-history.js
bots/: addresses.txt
community/: discord-setup.md  guidelines.md
docs/: DEPLOY_MINT_TAX_AUTOMATION.md  DEVNET_GO_NO_GO.md  DEVNET_TRIO_PROOF.md  HOW_IT_WORKS.md  INDEXER_STACK.md  LIQUIDITY_PAIRING_PLAN.md  MAINNET_DEPLOY_AND_SOL.md  MAINNET_GO_LIVE_CHECKLIST.md  MAINNET_GO_LIVE_WSL.md  MASTER_LAUNCH_ARCHITECTURE.md  ONE_DEPLOY_PIVOT_TOKEN.md  PRIVY_SOLANA_SETUP.md  PROOF_THEN_PRODUCTION.md  README.md  ROUND_LEDGER.md  RPC_RESILIENCE_AND_AIRSHIP.md  SNAPSHOT_MEME_CALLOUT.md  TEST_COIN_TIER_SETUP.md  VERCEL_STOP_LOGIN_REQUIRED.md
game-day-wallets/: .gitignore  launch-manifest.example.json  public-registry.example.json  round-ledger.example.json
launch-materials/: announcement.md  discord-launch.md  twitter-content.md
programs/game-registry/: Cargo.toml
programs/game-registry/src/: lib.rs
programs/lottery/: Cargo.toml
programs/lottery/src/: lib.rs  lib.rs.upgraded
programs/lp-manager/: Cargo.toml
programs/lp-manager/src/: lib.rs
programs/pepball-token/: Cargo.toml
programs/pepball-token/src/: lib.rs  lib.rs.upgraded
pump-fun/: launch-strategy.md  metadata.json
scripts/: README-HELIUS.md  README.md  add-entries-then-test-snapshots.js  audit-no-wallet-secrets.js  auto-entry-monitor.js  auto-rebalance-lp.js  auto-test-5-snapshots.js  bot-trader.js  calculate-revenue-needed.js  check-and-trigger.js  check-balance.js  check-latest-snapshot.js  (+120 more)
(+182 files in other folders)
