[package]
name = "pepball"
version = "0.1.0"
description = "PEPEBALL - Powerball-inspired lottery token with creator fund"
edition = "2021"

[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

