[workspace]
members = [
    "programs/pepball-token",
    "programs/lottery",
    "programs/lp-manager",
    "programs/tax-harvest"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"   # optimize for size (lower deploy cost)

[profile.release.build-override]
opt-level = "z"
incremental = false
codegen-units = 1



