[package]
name = "game-registry"
version = "0.1.0"
description = "PEPEBALL master launch registry — binds master token, Pump, and TRiX mints at init; sealed before public launch"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "~1.18.0"
