[package]
name = "pepball-token"
version = "0.1.0"
description = "PEPEBALL Token with Creator Fund and Jackpot Tax"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pepball_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18.0"

